--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
     <link rel="manifest" href="images/site.webmanifest" />
+    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="main.css">
+
     <title>Smart Sync</title>
   </head>
+  
   <body>
-    Hello World
+
+   
+
+Hello World
+
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
