--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
       </li>
       <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700">About Us</a>
+        <a href="#AboutSection" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700">About Us</a>
       </li>
       <li>
         <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700">Features</a>
@@ -111,7 +111,40 @@
 
 
 <!-- Home Page Ends Here -->
- <!-- Script for Flowbite -->
+
+<!-- About us Section -->
+
+
+<section class="dark:bg-gray-900" id="AboutSection">
+  <div class="py-8 px-4 mx-auto max-w-screen-xl flex flex-col lg:flex-row items-center lg:items-start text-center lg:text-left">
+    <!-- Image Section (Left Side) -->
+    <div class="lg:w-1/2 lg:pr-8 mt-8 lg:mt-0 hide-on-small">
+      <img src="./Images/homepage.png" alt="home page image" class="object-contain rounded-lg" style="width: 100%; max-width: 400px; height: auto;">
+    </div>
+
+    <!-- Text Section (Right Side) -->
+    <div class="lg:w-1/2">
+      <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
+        Simplifying Contact Management with Smart Sync
+
+      </h1>
+      <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-0 dark:text-gray-400">
+        In a world where staying connected is essential, Smart Sync brings you an innovative and easy-to-use contact management platform designed to streamline your communication. Whether you’re managing hundreds of business contacts or keeping track of personal relationships, Smart Sync ensures that your contact information is always organized and easily accessible. With advanced features like group categorization, contact notes, and powerful search functionality, finding the right person at the right time has never been easier. You can also sync Smart Sync with popular apps, ensuring your contacts stay up-to-date across all platforms. Our mission is to remove the complexity of contact management, allowing you to stay focused on what matters most—building strong, lasting relationships.
+      </p>
+      
+    </div>
+  </div>
+</section>
+
+<!-- About us Section --> 
+
+
+
+<!-- Features section starts here -->
+
+
+ <!-- Features section ends here -->
+<!-- Script for Flowbite -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 
 
