final touchup home section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="lg:w-1/2">
       <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">Stay Connected, Stay Organized</h1>
       <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-0 dark:text-gray-400">Welcome to Smart Sync, where staying connected is made simple! Our advanced contact management platform allows you to easily manage and access your contacts anytime, anywhere. With Smart Sync, you can create custom groups, add notes, and even sync with your favorite applications for a truly integrated experience. Keep your relationships thriving and your contacts organized, all in one place!</p>
-      <div class="flex flex-col space-y-4 sm:flex-row sm:justify-start sm:space-y-0">
+      <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0">
         <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
           Get started
           <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -102,11 +102,12 @@
     </div>
     
     <!-- Image Section -->
-    <div class="lg:w-1/2 mt-8 lg:mt-0 hide-on-small ">
-      <img src="./Images/home.png" alt="home page image" class="w-full h-auto  object-contain rounded-lg ">
+    <div class="lg:w-1/2 mt-8 lg:mt-0 hide-on-small">
+      <img src="./Images/home.png" alt="home page image" class="w-full h-auto object-contain rounded-lg">
     </div>
   </div>
 </section>
+
 
 
 
