--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
     <!-- Features section ends here -->
 
     <!-- Contact Us Starts Here -->
-    <footer class="bg-white dark:bg-gray-900">
+<footer class="bg-black dark:bg-black"> <!-- Changed background to black -->
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
-          <div class="mb-6 md:mb-0">
-            <form class="max-w-sm mx-auto">
+          <div class="mb-6 md:mb-0 w-full flex "> <!-- Updated flex wrapper -->
+            <form class="w-full max-w-md  p-4"> <!-- Changed to max-w-md for half width -->
               <div class="mb-5">
                 <label
                   for="name"
@@ -495,17 +495,8 @@
                 />
               </div>
               <div class="mb-5">
-                <label
-                  for="password"
-                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Your password</label
-                >
-                <input
-                  type="password"
-                  id="password"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  required
-                />
+                <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your message</label>
+                <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Leave a comment..."></textarea>
               </div>
               <div class="flex items-start mb-5">
                 <div class="flex items-center h-5">
