--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
     <!-- Features section ends here -->
 
     <!-- Contact Us Starts Here -->
-<footer class="bg-black dark:bg-black"> <!-- Changed background to black -->
+    <footer class="bg-white dark:bg-gray-900">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0 w-full flex "> <!-- Updated flex wrapper -->
