--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           id="navbar-sticky"
         >
           <ul
-            class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-transparent-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+            class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-transparent-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent  md:dark:bg-gray-900 dark:border-gray-700"
           >
             <li>
               <a
@@ -110,21 +110,21 @@
             <li>
               <a
                 href="#AboutSection"
-                class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700 sm:dark:text-gray-700"
+                class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700 sm:dark:text-gray-700"
                 >About Us</a
               >
             </li>
             <li>
               <a
                 href="#FeatureSection"
-                class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700"
+                class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700"
                 >Features</a
               >
             </li>
             <li>
               <a
                 href="#ContactUsSection"
-                class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700"
+                class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500  dark:hover:bg-gray-700 dark:hover:text-white hover:text-blue-700 md:dark:hover:bg-transparent dark:border-gray-700"
                 >Contact Us</a
               >
             </li>
